style: Fix margins on mobile screen in index.css

--- a/css/index.css
+++ b/css/index.css
@@ -255,7 +255,7 @@ img.full-length-img {
 
     .three-flex-boxes {
         width: 100%;
-        margin: 10% 0;
+        margin: 5% 0;
     }
 
     .address {
